add lib forder and  exp4j-0.4.8.jar to lib folder

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,4 +10,4 @@ javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\Muhamad Ariq Rasyid\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\mariq\\AppData\\Roaming\\NetBeans\\19\\build.properties
