--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.jar=${dist.dir}/Calculator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.exp4j-0.4.8.jar=C:\\Program Files\\Java\\Exp4j\\exp4j-0.4.8.jar
+file.reference.exp4j-0.4.8.jar=lib/exp4j-0.4.8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
